# wagtail-ab-testing

./: .coveragerc  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  package-lock.json  package.json  pyproject.toml  setup.py  testmanage.py  tox.ini  tsconfig.json  webpack.config.js
.circleci/: config.yml  trigger-nightly-build.sh
.github/: report_nightly_build_failure.py
.github/workflows/: nightly-tests.yml  publish-test.yml  publish.yml  test.yml
wagtail_ab_testing/: __init__.py  api.py  apps.py  compat.py  conf.py  events.py  models.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_ab_testing/migrations/: 0001_initial.py  0001_squashed_0012_abtest_variant_revision.py  0002_abtesthourlylog.py  0003_abtest_winning_variant.py  0004_started_at_and_duration.py  0005_hypothesis_and_created_by.py  0006_sample_size_min_value.py  0007_grant_moderators_add_abtest_permission.py  0008_finished_status.py  0009_rename_variant_to_version.py  0010_rename_treatment_to_variant.py  0011_rename_treatment_to_variant_data.py  0012_abtest_treatment_revision.py  0012_abtest_variant_revision.py  0013_alter_abtest_variant_revision.py
wagtail_ab_testing/static/wagtail_ab_testing/js/: .gitignore  tracker.js
wagtail_ab_testing/static_src/: custom.d.ts  main.tsx
wagtail_ab_testing/static_src/components/GoalSelector/: index.tsx
wagtail_ab_testing/static_src/components/PageEditorTab/: index.tsx
wagtail_ab_testing/static_src/style/: progress.scss
wagtail_ab_testing/static_src/styles/: forms.scss  sections.scss
wagtail_ab_testing/static_src/utils/: getJsonScript.tsx
wagtail_ab_testing/templates/wagtail_ab_testing/: add_compare.html  add_form.html  compare.html  confirm_delete_ab_tests.html  delete_ab_tests.html  progress.html  report.html  results.html  script.html
wagtail_ab_testing/templates/wagtail_ab_testing/_compat/: report.html
wagtail_ab_testing/templates/wagtail_ab_testing/includes/: comparison.html
wagtail_ab_testing/templatetags/: wagtail_ab_testing_tags.py
wagtail_ab_testing/test/: __init__.py  apps.py  models.py  settings.py  urls.py  wagtail_hooks.py
wagtail_ab_testing/test/migrations/: 0001_initial.py
wagtail_ab_testing/test/templates/wagtail_ab_testing_test/: simple_page.html
wagtail_ab_testing/test/tests/: test_abtest_model.py  test_add_abtest.py  test_api.py  test_compare_draft.py  test_delete_abtest.py  test_migrations.py  test_progress.py  test_report.py  test_results.py  test_serve.py  test_templatetags.py  test_views.py
